--- a/src/Weather.css
+++ b/src/Weather.css
@@ -30,9 +30,10 @@
   list-style: none;
 }
 
-.Weather img {
+.Weather canvas {
   vertical-align: top;
   margin-right: 10px;
+  margin-top: 10px;
 }
 
 .Weather .temperature {
@@ -52,5 +53,5 @@
 }
 
 .Weather .temp-info {
-  margin-top: 10px;
+  margin-top: 20px;
 }
