--- a/src/Weather.css
+++ b/src/Weather.css
@@ -33,7 +33,6 @@
 .Weather canvas {
   vertical-align: top;
   margin-right: 10px;
-  margin-top: 10px;
 }
 
 .Weather .temperature {
@@ -54,4 +53,5 @@
 
 .Weather .temp-info {
   margin-top: 20px;
+  display: flex;
 }
